--- a/soccer-streams-10.html
+++ b/soccer-streams-10.html
@@ -101,7 +101,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/tnt.m3u8')">Stream 1</button>
+<button class="streambutton" onclick="showPlayer('iframe', 'https://embedsports.top/embed/admin/ppv-ac-milan-vs-lecce/1')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -116,29 +116,40 @@
         <p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
     </footer>
 
-    <script>
-        var clapprPlayer;
+<script>
+    var clapprPlayer;
 
-        function showPlayer(playerType, stream) {
-            if (playerType === "clappr") {
-                if (clapprPlayer) {
-                    clapprPlayer.destroy();
-                }
+    function showPlayer(playerType, url) {
+        const container = document.getElementById('playerContainer');
+        container.innerHTML = ''; 
 
-                clapprPlayer = new Clappr.Player({
-                    source: stream,
-                    parentId: "#playerContainer",
-                    height: '100%',
-                    width: '100%',
-                    autoPlay: true,
-                });
+        if (playerType === 'clappr') {
+            if (clapprPlayer) {
+                clapprPlayer.destroy();
             }
+            clapprPlayer = new Clappr.Player({
+                source: url,
+                parentId: '#playerContainer',
+                height: '100%',
+                width: '100%',
+                autoPlay: true,
+            });
+        } else if (playerType === 'iframe') {
+            container.innerHTML = `
+                <iframe title="RAF 05: Covington vs. Rockhold Player" 
+                        marginheight="0" marginwidth="0" 
+                        src="${url}" 
+                        scrolling="no" allowfullscreen="yes" 
+                        allow="autoplay; encrypted-media; picture-in-picture;" 
+                        width="100%" height="100%" frameborder="0">
+                </iframe>`;
         }
+    }
 
-        window.onload = function() {
-            showPlayer('clappr', 'https://601.shadow-ran.online/tnt.m3u8');
-        };
-    </script>
+    window.onload = function() {
+        showPlayer('iframe', 'https://embedsports.top/embed/admin/ppv-ac-milan-vs-lecce/1');
+    };
+</script>
     <script>
         document.addEventListener('contextmenu', function (e) {
             e.preventDefault();
