--- a/nfl-streams-2.html
+++ b/nfl-streams-2.html
@@ -104,6 +104,7 @@
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nfl2.m3u8', '601'))">Stream 1</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('main.m3u8', 'daffodil'))">Stream 2</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nflalt.m3u8', '601'))">Stream 3</button>
+                <button class="streambutton" onclick="showIframe('https://player.twitch.tv/?channel=miketomlin_steelers&parent=roxiestreams.live')">Stream 4</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
