--- a/nfl-streams-2.html
+++ b/nfl-streams-2.html
@@ -203,11 +203,10 @@ function showTwitch() {
   tDiv.style.display = 'block';
   tDiv.innerHTML = ''; // Clear old iframe if any
 
-  // Init Twitch embed (channel daissy0s)
   twitchEmbed = new Twitch.Embed("twitch-embed", {
     width: "100%",
     height: "100%",
-    channel: "daissy0s",
+    channel: "rylen4_smile",
     layout: "video",
     autoplay: true,
     parent: ["roxiestreams.live"] // must match your domain [web:1][web:3]
@@ -217,7 +216,7 @@ function showTwitch() {
 // Popout Twitch stream (Stream 4)
 function openTwitchPopup() {
   // Twitch player with parent in query [web:2][web:22]
-  var url = "https://player.twitch.tv/?channel=daissy0s&parent=roxiestreams.live";
+  var url = "https://player.twitch.tv/?channel=rylen4_smile&parent=roxiestreams.live";
 
   window.open(
     url,
