--- a/nba.html
+++ b/nba.html
@@ -226,6 +226,152 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 19, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Milwaukee Bucks vs Atlanta Hawks
+        </a>
+       </td>
+       <td>
+        January 19, 2026 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 20, 2026 10:00 AM:00" data-start="January 19, 2026 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Oklahoma City Thunder vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        January 19, 2026 11:30 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 20, 2026 11:30 AM:00" data-start="January 19, 2026 11:30 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Los Angeles Clippers vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        January 19, 2026 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 20, 2026 12:00 PM:00" data-start="January 19, 2026 12:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Dallas Mavericks vs New York Knicks
+        </a>
+       </td>
+       <td>
+        January 19, 2026 2:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 20, 2026 2:00 PM:00" data-start="January 19, 2026 2:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Utah Jazz vs San Antonio Spurs
+        </a>
+       </td>
+       <td>
+        January 19, 2026 2:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 20, 2026 2:00 PM:00" data-start="January 19, 2026 2:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Indiana Pacers vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        January 19, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 20, 2026 4:00 PM:00" data-start="January 19, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Phoenix Suns vs Brooklyn Nets
+        </a>
+       </td>
+       <td>
+        January 19, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 20, 2026 4:30 PM:00" data-start="January 19, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Boston Celtics vs Detroit Pistons
+        </a>
+       </td>
+       <td>
+        January 19, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 20, 2026 5:00 PM:00" data-start="January 19, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Miami Heat vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        January 19, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 20, 2026 7:00 PM:00" data-start="January 19, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
