--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <td><span class="countdown-timer" data-end="January 20, 2026 12:00:00 PM" data-start="January 19, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">CFP National Championship</a></td>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">CFP National Championship</a></td>
 <td>January 19, 2026 4:30 PM</td>
 <td><span class="countdown-timer" data-end="January 21, 2026 12:00:00 PM" data-start="January 19, 2026 4:30:00 PM"></span></td>
 </tr>
