--- a/soccer-streams-10.html
+++ b/soccer-streams-10.html
@@ -100,9 +100,9 @@
     <div class="container container-fluid pt-2 text-white">
         <div class="fullplayer">
             <div id="playerContainer"></div>
-	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('main.m3u8', '601'))">Stream 1 </button>
-	</div>
+            <div class="streamchanger">
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://storage.railway.app/organized-pierogi-ssnev8/a1b2c3d4e5f6a7b8c9d0e1f2a3b4c5d6.m3u8?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=tid_Wzgsfcv_JTSuyvynvo_ERVPvp_zFPkylviswDZvLuepKWFpcJq%2F20260120%2Fauto%2Fs3%2Faws4_request&X-Amz-Date=20260120T221226Z&X-Amz-Expires=3600&X-Amz-Signature=90718ef34c729569e96995209053d75a2e76ed2e2c9664ecdd5dc60ace7a9363&X-Amz-SignedHeaders=host&x-amz-checksum-mode=ENABLED&x-id=GetObject')">Stream 1</button>
+            </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
             </div>
@@ -116,46 +116,29 @@
         <p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
     </footer>
 
-<script>
-var clapprPlayer;
-var domains = [];
-var subdomain = 'daffodil';  // Edit this per HTML file
+    <script>
+        var clapprPlayer;
 
-// Load domains from txt file
-fetch('domains.txt')
-  .then(response => response.text())
-  .then(data => {
-    domains = data.trim().split('\n').filter(d => d.trim());
-    // Auto-load initial stream after domains load
-    setTimeout(() => showPlayer('clappr', getRandomStream('main.m3u8')), 500);
-  })
-  .catch(() => {
-    console.error('Failed to load domains.txt');
-  });
+        function showPlayer(playerType, stream) {
+            if (playerType === "clappr") {
+                if (clapprPlayer) {
+                    clapprPlayer.destroy();
+                }
 
-function getRandomStream(streamPath, subdomain = '601') {
-  if (domains.length === 0) {
-    return `https://${subdomain}.shadow-ran.online/${streamPath}`; // Fallback
-  }
-  const randomDomain = domains[Math.floor(Math.random() * domains.length)];
-  return `https://${subdomain}.${randomDomain}/${streamPath}`;
-}
+                clapprPlayer = new Clappr.Player({
+                    source: stream,
+                    parentId: "#playerContainer",
+                    height: '100%',
+                    width: '100%',
+                    autoPlay: true,
+                });
+            }
+        }
 
-function showPlayer(playerType, stream) {
-  if (playerType === "clappr") {
-    if (clapprPlayer) {
-      clapprPlayer.destroy();
-    }
-    clapprPlayer = new Clappr.Player({
-      source: stream,
-      parentId: "#playerContainer",
-      height: '100%',
-      width: '100%',
-      autoPlay: true,
-    });
-  }
-}
-</script>
+        window.onload = function() {
+            showPlayer('clappr', 'https://storage.railway.app/organized-pierogi-ssnev8/a1b2c3d4e5f6a7b8c9d0e1f2a3b4c5d6.m3u8?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=tid_Wzgsfcv_JTSuyvynvo_ERVPvp_zFPkylviswDZvLuepKWFpcJq%2F20260120%2Fauto%2Fs3%2Faws4_request&X-Amz-Date=20260120T221226Z&X-Amz-Expires=3600&X-Amz-Signature=90718ef34c729569e96995209053d75a2e76ed2e2c9664ecdd5dc60ace7a9363&X-Amz-SignedHeaders=host&x-amz-checksum-mode=ENABLED&x-id=GetObject');
+        };
+    </script>
     <script>
         document.addEventListener('contextmenu', function (e) {
             e.preventDefault();
