--- a/soccer.html
+++ b/soccer.html
@@ -98,59 +98,74 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Kairat vs Club Brugge</a></td>
-<td>January 20, 2026 07:30 AM</td>
-<td><span class="countdown-timer" data-end="January 21, 2026 07:30:00 AM" data-start="January 20, 2026 07:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Damac vs Al Nassr</a></td>
+<td>January 21, 2026 09:30 AM</td>
+<td><span class="countdown-timer" data-end="January 22, 2026 09:30:00 AM" data-start="January 21, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Bodø / Glimt vs Man City</a></td>
-<td>January 20, 2026 09:45 AM</td>
-<td><span class="countdown-timer" data-end="January 21, 2026 09:45:00 AM" data-start="January 20, 2026 09:45:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Galatasaray vs Atlético Madrid</a></td>
+<td>January 21, 2026 09:45 AM</td>
+<td><span class="countdown-timer" data-end="January 22, 2026 09:45:00 AM" data-start="January 21, 2026 09:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">UEFA Golazo Show</a></td>
-<td>January 20, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 21, 2026 12:00:00 PM" data-start="January 20, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Qarabağ vs Frankfurt</a></td>
+<td>January 21, 2026 09:45 AM</td>
+<td><span class="countdown-timer" data-end="January 22, 2026 09:45:00 AM" data-start="January 21, 2026 09:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Inter Milan vs Arsenal</a></td>
-<td>January 20, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 21, 2026 12:00:00 PM" data-start="January 20, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Southampton vs Sheffield United</a></td>
+<td>January 21, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 22, 2026 11:45:00 AM" data-start="January 21, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">København vs Napoli</a></td>
-<td>January 20, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 21, 2026 12:00:00 PM" data-start="January 20, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">UEFA Golazo Show</a></td>
+<td>January 21, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 22, 2026 12:00:00 PM" data-start="January 21, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Olympiakos Piraeus vs Bayer Leverkusen</a></td>
-<td>January 20, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 21, 2026 12:00:00 PM" data-start="January 20, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Atalanta vs Athletic Club</a></td>
+<td>January 21, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 22, 2026 12:00:00 PM" data-start="January 21, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Tottenham Hotspur vs Dortmund</a></td>
-<td>January 20, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 21, 2026 12:00:00 PM" data-start="January 20, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Bayern München vs Union Saint-Gilloise</a></td>
+<td>January 21, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 22, 2026 12:00:00 PM" data-start="January 21, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Villarreal vs Ajax</a></td>
-<td>January 20, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 21, 2026 12:00:00 PM" data-start="January 20, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Chelsea vs Paphos</a></td>
+<td>January 21, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 22, 2026 12:00:00 PM" data-start="January 21, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Sporting CP vs PSG</a></td>
-<td>January 20, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 21, 2026 12:00:00 PM" data-start="January 20, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Juventus vs Benfica</a></td>
+<td>January 21, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 22, 2026 12:00:00 PM" data-start="January 21, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Real Madrid vs Monaco</a></td>
-<td>January 20, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 21, 2026 12:00:00 PM" data-start="January 20, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Newcastle United vs PSV</a></td>
+<td>January 21, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 22, 2026 12:00:00 PM" data-start="January 21, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Wrexham vs Leicester City</a></td>
-<td>January 20, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 21, 2026 12:00:00 PM" data-start="January 20, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Marseille vs Liverpool</a></td>
+<td>January 21, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 22, 2026 12:00:00 PM" data-start="January 21, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Slavia Praha vs Barcelona</a></td>
+<td>January 21, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 22, 2026 12:00:00 PM" data-start="January 21, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Stoke City vs Middlesbrough</a></td>
+<td>January 21, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 22, 2026 12:00:00 PM" data-start="January 21, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Colo-Colo vs Penarol</a></td>
+<td>January 21, 2026 3:45 PM</td>
+<td><span class="countdown-timer" data-end="January 22, 2026 03:45:00 PM" data-start="January 21, 2026 03:45:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
